# cpp-parallel-downloader

./: .gitignore  CMakeLists.txt  README.md  curlgetexample.cpp
example/: curlgetexample.cpp  rangedownloader.cpp  singledownloader.cpp
output/: singledownloader.txt
